# Hesiod

./: .gitignore  .gitmodules  AGENTS.md  MIGRATION_ACTION.md  STATUS_REPORT.md  migration_plan.md  mkdocs.yml  pyproject.toml  tmp_patch.diff
.github/workflows/: python-ci.yml
docs/architecture/: node_editor_options.md  python_runtime.md
docs/development/: python_contributor_guide.md
hesiod_py/: __init__.py  bootstrap.py
hesiod_py/core/: configuration.py  graph.py  logging.py  project.py  registry.py  runtime.py
hesiod_py/data/: structures.py
hesiod_py/io/: hsd.py
hesiod_py/nodes/: blend.py  filter.py  image_io.py  mask.py  noise.py  primitives.py  transforms.py
hesiod_py/ui/: __init__.py  _compat.py  app.py  controller.py  main_window.py  node_factory.py  preview.py  project_manager.py  theme.py
tests/: test_blend_filter_mask.py  test_configuration.py  test_hsd_importer.py  test_image_io_nodes.py  test_node_metadata.py  test_noise_and_transforms.py  test_runtime.py  test_ui_controller.py  test_ui_preview.py
